# gametable-sdk

./: CMakeLists.txt  README.md
include/gametablesdk/: CMakeLists.txt  helper.h  network.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  helper.cpp  network.cpp
